# time-capsule

./: .gitignore  README.md  pyproject.toml  workspace.yaml
data/: time_capsule.duckdb
src/time_capsule/: __init__.py  assets.py  financial_assets.py  resources.py  weather_assets.py
tests/: test_assets.py  test_financial_assets.py  test_weather_assets.py
